--- a/artiste.html
+++ b/artiste.html
@@ -27,29 +27,33 @@
                     <img src="./img/musician-3522702_1920.jpg" alt="musician">
                 </div>
             </div>
-            <div class="cardClip">
+            <div class="clips">
                 <h4>Leur derniers clips</h4>
-                <img src="./img/admission-2974645_1920.jpg" alt="admission">
-            </div>
-            <div class="cardClip">
-                <img src="./img/auditorium-86197_1920.jpg" alt="auditorium">
-            </div>
-            <div class="cardClip">
-                <img src="./img/audience-1867754_1920.jpg" alt="audience">
-            </div>
-            <div class="cardClip">
-                <img src="./img/crowd-of-people-1209630_1920.jpg" alt="crowd-of-people">
+                <div class="cardClip">
+                    <img src="./img/admission-2974645_1920.jpg" alt="admission">
+                </div>
+                <div class="cardClip">
+                    <img src="./img/auditorium-86197_1920.jpg" alt="auditorium">
+                </div>
+                <div class="cardClip">
+                    <img src="./img/audience-1867754_1920.jpg" alt="audience">
+                </div>
+                <div class="cardClip">
+                    <img src="./img/crowd-of-people-1209630_1920.jpg" alt="crowd-of-people">
+                </div>
             </div>
             <div class="cardBiographie">
                 <h4>La biographie du moment</h4>
                 <div class="biographieblock">
                     <img src="./img/elvis-937614_1920.jpg" alt="">
-                    <div class="textbiographie">
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit officiis explicabo quisquam voluptatem ullam necessitatibus aliquam dicta neque alias quaerat.</p>
-                    </div>
+                </div>
+                <div class="textbiographie">
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit officiis explicabo quisquam voluptatem ullam necessitatibus aliquam dicta neque alias quaerat.</p>
                 </div>
                 <div class="prochainConcerts">
-
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <p>Lorem ipsum dolor sit amet.</p>
                 </div>
             </div>
         </div>
