--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1 class="logo"><strong>MY MUSIC<span>©</span></strong> </h1>
     </header>
     <div class="container">
-        <h2>Les Artistes</h2>
+        <h2> <a href="./artiste.html">Les Artistes</a></h2>
         <div class="artistesPhoto">
             <div class="card"><img src="./img/elvis-937614_1920.jpg" alt="elvis" ></div>
             <div class="card"><img src="./img/billy-ray-cyrus-79522_1920.jpg" alt="billy-ray-cyrus" ></div>
