--- a/artiste.html
+++ b/artiste.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1 class="logo"><strong>MY MUSIC<span>©</span></strong> </h1>
+        <h1 class="logo"><strong><a href="./index.html">MY MUSIC</a><span>©</span></strong> </h1>
     </header>
     <div class="container">
         <div class="wrapper">
